[gd_scene load_steps=6 format=2]

[ext_resource path="res://components/toast/component_toast.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/icon_tabs_close_white.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0, 0, 0, 0.235294 )
shadow_size = 5
shadow_offset = Vector2( 0, 5 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/theme/Barlow-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
use_mipmaps = true
use_filter = true
extra_spacing_top = -3
extra_spacing_bottom = -2
font_data = SubResource( 4 )

[node name="Toast" type="PanelContainer"]
self_modulate = Color( 0.278431, 0.278431, 0.278431, 1 )
margin_right = 400.0
margin_bottom = 27.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Main" type="HBoxContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 394.0
margin_bottom = 47.0

[node name="Content" type="VBoxContainer" parent="Main"]
margin_right = 370.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="Main/Content"]
margin_right = 370.0
margin_bottom = 15.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Title"

[node name="Description" type="RichTextLabel" parent="Main/Content"]
margin_top = 19.0
margin_right = 370.0
margin_bottom = 41.0
mouse_filter = 1
size_flags_horizontal = 3
bbcode_enabled = true
fit_content_height = true

[node name="CloseButton" type="TextureButton" parent="Main"]
margin_left = 374.0
margin_right = 388.0
margin_bottom = 41.0
rect_min_size = Vector2( 14, 14 )
texture_normal = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="DisappearTimer" type="Timer" parent="."]
one_shot = true

[connection signal="meta_clicked" from="Main/Content/Description" to="." method="_on_Description_meta_clicked"]
[connection signal="pressed" from="Main/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_DisappearTimer_timeout"]
